--- a/resources/view/pages/header.html
+++ b/resources/view/pages/header.html
@@ -2,4 +2,5 @@
     <h1>MVC</h1>
     <a href="{{URL}}"> <button class="btn btn-light">Home</button></a>
     <a href="{{URL}}/about"> <button class="btn btn-light">About</button></a>
+    <a href="{{URL}}/feedback"> <button class="btn btn-light">feedback</button></a>
 </div>
