--- a/resources/view/pages/feedback.html
+++ b/resources/view/pages/feedback.html
@@ -4,12 +4,13 @@
 <section id="feedback">
     
     {{items}}
-
+    
+    {{pagination}}
     <hr>
 
     <section id="form">
         <h3>Your Feedback</h3>
-        <form action="" method="POST">
+        <form action="?page=1" method="POST">
 
             <div class="form-group">
                 <label for="">Name</label>
