Admin dashboard initialized

--- a/resources/view/admin/login.html
+++ b/resources/view/admin/login.html
@@ -1,6 +1,6 @@
 <div class="d-flex justify-content-center">
 
-    <div class="card mt-3 text-dark text-center" style="width: 500px;">
+    <div class="card mt-3 text-dark text-center" style="width: 350px;">
 
         <div class="card-header">
             <h1>Login</h1>
@@ -19,7 +19,7 @@
 
                 <div class="form-group my-3">
                     <label for="">Password</label>
-                    <input type="password" name="password" class="form-control" placeholder="********" required>
+                    <input type="password" name="password" class="form-control" placeholder="Password" required>
                 </div>
 
                 <button type="submit" class="btn btn-lg btn-success">Login</button>
